apps/copyparty/components/tailscale/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftp
  annotations:
    tailscale.com/hostname: ftp
    tailscale.com/proxy-class: ftp
    tailscale.com/tags: tag:ftp
spec:
  loadBalancerClass: tailscale
---
apiVersion: v1
kind: Service
metadata:
  name: ftps
  annotations:
    tailscale.com/hostname: ftps
    tailscale.com/proxy-class: ftps
    tailscale.com/tags: tag:ftps
spec:
  loadBalancerClass: tailscale
