apps/copyparty/components/tailscale/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copyparty
  annotations:
    tailscale.com/proxy.requestOrigin: "true"
spec:
  ingressClassName: tailscale
